--- a/index.html
+++ b/index.html
@@ -33,36 +33,58 @@
 
   <body>
 
-    <div>
-      <nav class="navbar">
-        <div class="container">
-          <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="#"><img src="assets/images/logo.png" width="200" height="27"></a>
-          </div>
-          <div id="navbar" class="collapse navbar-collapse">
-            <ul class="nav navbar-nav">
-              <li class="active"><a href="#">CONCEPT</a></li>
-              <li><a href="#about">LA CARTE</a></li>
-              <li><a href="#contact">COLLABORATEURS</a></li>
-              <li><a href="#contact">CONTACT</a></li>
-            </ul>
-          </div><!--/.nav-collapse -->
+    <nav class="navbar">
+
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#"><img src="assets/images/logo.png" width="200" height="27"></a>
         </div>
-      </nav>
-      <img class="img-responsive" src="assets/images/main_top.png" />
-    </div>
+        <div id="navbar" class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="#">CONCEPT</a></li>
+            <li><a href="#about">LA CARTE</a></li>
+            <li><a href="#contact">COLLABORATEURS</a></li>
+            <li><a href="#contact">CONTACT</a></li>
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div>
+      
+    </nav>
 
-    <div class="container">
+    <div style="padding: 0px" class="container-fluid">
 
-      <div class="starter-template">
-        <h1>Bootstrap starter template</h1>
-        <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
+      <div style="margin-bottom: 30px">
+        <img class="img-responsive" src="assets/images/main_top.png" />
+        <div style="margin-left: 150px" class="black-box">NOTRE SECRET ? DES PRODUITS FRAIS ET LOCAUX</div>
+      </div>
+
+      <div style="margin-bottom: 100px; position: relative">
+        <img class="img-responsive" src="assets/images/main_image.png" />
+        <div style="bottom: -70px; position: absolute; right: 120px; padding-left: 150px; padding-right: 150px;" class="black-box">NOS COUPS DE COEUR DE LA SAISON</div>
+      </div>
+
+      <div style="position: relative">
+        <div>
+          <img class="img-responsive" src="assets/images/main_bottom.png" />
+        </div>
+        <div style="font-size: 34px; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);">
+          <div>
+            <span>RETROUVEZ NOUS AUSSI SUR</span>
+            <img src="assets/images/facebook_icon.png" />
+            <img src="assets/images/instagram_icon.png" />  
+          </div>
+        </div>
+      </div>
+
+      <div style="padding: 15px 30px 0px 30px; float: right; font-family: 'Chalkduster'">
+        <span>100% LOCAL, 100% SAVOIR FAIRE BELGE, 100% DELICIEUX</span>
+        <img src="assets/images/FLAG.png" />
       </div>
 
     </div><!-- /.container -->
