--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
 
     <div style="padding: 0px" class="container-fluid">
 
-      <div style="margin-bottom: 30px">
+      <div style="margin-bottom: 90px; position: relative">
         <img class="img-responsive" src="assets/images/main_top.png" />
-        <div style="margin-left: 150px" class="black-box">NOTRE SECRET ? DES PRODUITS FRAIS ET LOCAUX</div>
+        <div style="margin-left: 150px; position: absolute; bottom: -60px" class="black-box">NOTRE SECRET ? DES PRODUITS FRAIS ET LOCAUX</div>
       </div>
 
       <div style="margin-bottom: 100px; position: relative">
