Implement concept page

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
   <body>
 
-    <nav class="navbar">
+    <nav style="margin-top: 50px" class="navbar">
 
       <div class="container">
         <div class="navbar-header">
@@ -82,7 +82,7 @@
         </div>
       </div>
 
-      <div style="padding: 15px 30px 0px 30px; float: right; font-family: 'Chalkduster'">
+      <div class="footer">
         <span>100% LOCAL, 100% SAVOIR FAIRE BELGE, 100% DELICIEUX</span>
         <img src="assets/images/FLAG.png" />
       </div>
