--- a/concept.html
+++ b/concept.html
@@ -48,14 +48,14 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#"><img src="assets/images/logo.png" width="200" height="27"></a>
+            <a class="navbar-brand" href="index.html"><img src="assets/images/logo.png" width="200" height="27"></a>
           </div>
           <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-              <li class="active"><a href="#">CONCEPT</a></li>
-              <li><a href="#about">LA CARTE</a></li>
-              <li><a href="#contact">COLLABORATEURS</a></li>
-              <li><a href="#contact">CONTACT</a></li>
+              <li><a href="concept.html">CONCEPT</a></li>
+              <li><a href="carte.html">LA CARTE</a></li>
+              <li><a href="collaborators.html">COLLABORATEURS</a></li>
+              <li><a href="contact.html">CONTACT</a></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
