--- a/collaborators_4.html
+++ b/collaborators_4.html
@@ -34,14 +34,8 @@
   <body>
 
     <div style="position: relative">
-      <div>
-        <div>
-          <img class="img-responsive" src="assets/images/carte_top.png" />
-        </div>
-        <div style="margin-left: 100px; width: 700px; text-align: center">
-          <div style="width: 100%" class="black-box">LES INCONTOURNABLES</div>
-          <img style="width: 85%; margin-top: 30px" src="assets/images/menu1.png" />
-        </div>
+      <div style="margin-left: 100px; margin-right: 300px">
+        <img class="img-responsive" src="assets/images/colla_top_4.png" />
       </div>
 
       <div class="nav-bg"></div>
@@ -70,16 +64,40 @@
         
       </nav>
 
-      <div style="margin-top: 30px; position: relative">
-        <img class="img-responsive" src="assets/images/carte_bottom.png" />
-        <div style="width: 700px; text-align: center; position: absolute; right: 100px; top: 100px">
-          <div style="width: 100%" class="black-box">LES TARTINES DE SAISON</div>
-          <img style="width: 70%; margin-top: 30px" src="assets/images/menu2.png" />
+      <div style="width: 700px; text-align: center; margin-left: 50px" class="black-box">CLIMONADE</div>
+
+      <div style="margin: 40px 100px 40px 100px" class="row">
+        <div class="col-md-3">
+          <img class="img-responsive" src="assets/images/colla_7.png" />
         </div>
-        <div style="position: absolute; bottom: 0px; right: 0px" class="footer-over">
+        <div class="col-md-9">
+          <img class="img-responsive" src="assets/images/colla_text_7.png" />
+        </div>
+      </div>
+
+      <div style="width: 700px; text-align: center; margin-right: 50px; margin-bottom: 40px; float: right" class="black-box">LA BESTIALE</div>
+      
+      <div style="margin: 40px 100px 40px 100px" class="row clearfix">
+        <div class="col-md-9" style="margin-bottom: 20px">
+          <img class="img-responsive" src="assets/images/colla_text_8.png" />
+        </div>
+        <div class="col-md-3">
+          <img class="img-responsive" src="assets/images/colla_8.png" />
+        </div>
+      </div>
+
+      <div class="clearfix" style="margin-top: 150px">
+        <div style="right: 50px; bottom: 50px; position: absolute">
+          <a href="collaborators.html"><img src="assets/images/arrow_right.png" width="30px"></a>
+        </div>
+        <div style="left: 50px; bottom: 50px; position: absolute">
+          <a href="collaborators_3.html"><img src="assets/images/arrow_left.png" width="30px"></a>
+        </div>
+      </div>
+
+      <div class="footer clearfix">
         <span>100% LOCAL, 100% SAVOIR FAIRE BELGE, 100% DELICIEUX</span>
         <img src="assets/images/FLAG.png" />
-      </div>
       </div>
 
     </div>
