--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#"><img src="assets/images/logo.png" width="200" height="27"></a>
+          <a class="navbar-brand" href="index.html"><img src="assets/images/logo.png" width="200" height="27"></a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">CONCEPT</a></li>
-            <li><a href="#about">LA CARTE</a></li>
-            <li><a href="#contact">COLLABORATEURS</a></li>
-            <li><a href="#contact">CONTACT</a></li>
+            <li><a href="concept.html">CONCEPT</a></li>
+            <li><a href="carte.html">LA CARTE</a></li>
+            <li><a href="collaborators.html">COLLABORATEURS</a></li>
+            <li><a href="contact.html">CONTACT</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -76,8 +76,8 @@
         <div style="font-size: 34px; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);">
           <div>
             <span>RETROUVEZ NOUS AUSSI SUR</span>
-            <img src="assets/images/facebook_icon.png" />
-            <img src="assets/images/instagram_icon.png" />  
+            <a target="_blank" href="https://www.facebook.com/tartinemoiaussi/"><img src="assets/images/facebook_icon.png" /></a>
+            <a target="_blank" href="https://www.instagram.com/tartinemoiaussi/"><img src="assets/images/instagram_icon.png" /></a> 
           </div>
         </div>
       </div>
