Fixed the width

--- a/carte.html
+++ b/carte.html
@@ -33,7 +33,7 @@
 
   <body>
 
-    <div style="position: relative">
+    <div class="wrap-container">
       <div>
         <div>
           <img class="img-responsive" src="assets/images/carte_top.png" />
