--- a/collaborators_4.html
+++ b/collaborators_4.html
@@ -33,7 +33,7 @@
 
   <body>
 
-    <div style="position: relative">
+    <div class="wrap-container">
       <div style="margin-left: 100px; margin-right: 300px">
         <img class="img-responsive" src="assets/images/colla_top_4.png" />
       </div>
