--- a/concept.html
+++ b/concept.html
@@ -33,7 +33,7 @@
 
   <body>
 
-    <div style="position: relative">
+    <div class="wrap-container">
       <img class="img-responsive" src="assets/images/concept_background.png" />
 
       <div class="nav-bg"></div>
