--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
 
   <body>
 
-    <div style="position: relative">
+    <div class="wrap-container">
       <div>
         <div>
           <img style="width: 60%; display: block; margin: auto;" class="img-responsive" src="assets/images/contact_top.png" />
