--- a/index.html
+++ b/index.html
@@ -32,37 +32,37 @@
   </head>
 
   <body>
-
-    <nav style="margin-top: 50px" class="navbar">
-
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="index.html"><img src="assets/images/logo.png" width="200" height="27"></a>
-        </div>
-        <div id="navbar" class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-            <li><a href="concept.html">CONCEPT</a></li>
-            <li><a href="carte.html">LA CARTE</a></li>
-            <li><a href="collaborators.html">COLLABORATEURS</a></li>
-            <li><a href="contact.html">CONTACT</a></li>
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div>
-      
-    </nav>
-
-    <div style="padding: 0px" class="container-fluid">
-
-      <div style="margin-bottom: 90px; position: relative">
+    <div class="wrap-container">
+      <div style="padding-top: 150px; position: relative">
         <img class="img-responsive" src="assets/images/main_top.png" />
         <div style="margin-left: 150px; position: absolute; bottom: -60px" class="black-box">NOTRE SECRET ? DES PRODUITS FRAIS ET LOCAUX</div>
       </div>
+
+      <nav class="navbar nav-over">
+
+        <div class="container">
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="index.html"><img src="assets/images/logo.png" width="200" height="27"></a>
+          </div>
+          <div id="navbar" class="collapse navbar-collapse">
+            <ul class="nav navbar-nav">
+              <li><a href="concept.html">CONCEPT</a></li>
+              <li><a href="carte.html">LA CARTE</a></li>
+              <li><a href="collaborators.html">COLLABORATEURS</a></li>
+              <li><a href="contact.html">CONTACT</a></li>
+            </ul>
+          </div><!--/.nav-collapse -->
+        </div>
+        
+      </nav>
+
+    <div style="padding: 0px; margin-top: 90px" class="container-fluid">
 
       <div style="margin-bottom: 100px; position: relative">
         <img class="img-responsive" src="assets/images/main_image.png" />
@@ -73,7 +73,7 @@
         <div>
           <img class="img-responsive" src="assets/images/main_bottom.png" />
         </div>
-        <div style="font-size: 34px; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);">
+        <div style="font-size: 24px; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);">
           <div>
             <span>RETROUVEZ NOUS AUSSI SUR</span>
             <a target="_blank" href="https://www.facebook.com/tartinemoiaussi/"><img src="assets/images/facebook_icon.png" /></a>
@@ -88,7 +88,7 @@
       </div>
 
     </div><!-- /.container -->
-
+    </div>
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
