--- a/collaborators_2.html
+++ b/collaborators_2.html
@@ -33,7 +33,7 @@
 
   <body>
 
-    <div style="position: relative">
+    <div class="wrap-container">
       <div style="margin-left: 50px; margin-right: 50px">
         <img class="img-responsive" src="assets/images/colla_top_2.png" />
       </div>
