--- a/contact.html
+++ b/contact.html
@@ -78,7 +78,7 @@
         <div>
           <img class="img-responsive" src="assets/images/main_bottom.png" />
         </div>
-        <div style="font-size: 34px; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);">
+        <div class="footer-socials">
           <div>
             <span>RETROUVEZ NOUS AUSSI SUR</span>
             <img src="assets/images/facebook_icon.png" />
