--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <div>
           <img class="img-responsive" src="assets/images/main_bottom.png" />
         </div>
-        <div style="font-size: 24px; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);">
+        <div class="footer-socials">
           <div>
             <span>RETROUVEZ NOUS AUSSI SUR</span>
             <a target="_blank" href="https://www.facebook.com/tartinemoiaussi/"><img src="assets/images/facebook_icon.png" /></a>
