Fixes home on mobile

--- a/contact.html
+++ b/contact.html
@@ -78,11 +78,11 @@
         <div>
           <img class="img-responsive" src="assets/images/main_bottom.png" />
         </div>
-        <div class="footer-socials">
-          <div>
+        <div class="footer-socials-wrapper">
+          <div class="footer-socials">
             <span>RETROUVEZ NOUS AUSSI SUR</span>
-            <img src="assets/images/facebook_icon.png" />
-            <img src="assets/images/instagram_icon.png" />  
+            <a target="_blank" href="https://www.facebook.com/tartinemoiaussi/"><img src="assets/images/facebook_icon.png" /></a>
+            <a target="_blank" href="https://www.instagram.com/tartinemoiaussi/"><img src="assets/images/instagram_icon.png" /></a> 
           </div>
         </div>
       </div>
