--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
         <div>
           <img class="img-responsive" src="assets/images/main_bottom.png" />
         </div>
-        <div class="footer-socials">
-          <div>
+        <div class="footer-socials-wrapper">
+          <div class="footer-socials">
             <span>RETROUVEZ NOUS AUSSI SUR</span>
             <a target="_blank" href="https://www.facebook.com/tartinemoiaussi/"><img src="assets/images/facebook_icon.png" /></a>
             <a target="_blank" href="https://www.instagram.com/tartinemoiaussi/"><img src="assets/images/instagram_icon.png" /></a> 
