Modify concept page

--- a/concept.html
+++ b/concept.html
@@ -36,6 +36,13 @@
     <div class="wrap-container">
       <img class="img-responsive" src="assets/images/concept_background.png" />
 
+      <div class="concept-wrapper">
+        <div style="width: 100%; text-align: center" class="black-box">CONCEPT</div>
+        <div class="concept-box">
+          Nous vous invitons à découvrir et redécouvrir un classique de l'alimentation belge... LA TARTINE! Gourmande et généreuse elle sera subliméE pour votre bon plaisir. Au delà de déguster un pain excellent vous participerez à une démarche radicalement plus réfléchie. Un circuit court qui nous permet de mettre en avant les producteurs belges et leurs produits. Notre éthique valorise une proximité, une localité riche de sens pour l'économie et l'écologie de notre pays. Nous mettons à l'honneur les petits producteurs et agriculteurs mais aussi les entreprises qui ont su garder à l'esprit l'éthique d'un travail de proximité.
+        </div>
+      </div>
+
       <div class="nav-bg"></div>
 
       <nav class="navbar nav-over">
@@ -61,13 +68,6 @@
         </div>
         
       </nav>
-
-      <div style="position: absolute; top: 250px; left: 80px">
-        <div style="width: 100%; text-align: center" class="black-box">CONCEPT</div>
-        <div class="concept-box">
-          <img src="assets/images/concept.png" width="600px" />
-        </div>
-      </div>
       
       <div style="position: absolute; bottom: 0px; right: 0px" class="footer">
         <span>100% LOCAL, 100% SAVOIR FAIRE BELGE, 100% DELICIEUX</span>
