--- a/contact.html
+++ b/contact.html
@@ -1,106 +1,130 @@
-
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="">
-    <meta name="author" content="">
 
-    <title>Tartin'emoi</title>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+  <meta name="description" content="">
+  <meta name="author" content="">
 
-    <!-- Bootstrap core CSS -->
-    <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <title>Tartin'emoi</title>
 
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <link href="assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
+  <!-- Bootstrap core CSS -->
+  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Custom styles for this template -->
-    <link href="assets/css/main.css" rel="stylesheet">
+  <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+  <link href="assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
 
-    <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
-    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-    <script src="assets/js/ie-emulation-modes-warning.js"></script>
+  <!-- Custom styles for this template -->
+  <link href="assets/css/main.css" rel="stylesheet">
 
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
+  <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
+  <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
+  <script src="assets/js/ie-emulation-modes-warning.js"></script>
+
+  <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+  <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-  </head>
+</head>
 
-  <body>
+<body>
 
-    <div class="wrap-container">
-      <div>
-        <div>
-          <img style="width: 60%; display: block; margin: auto;" class="img-responsive" src="assets/images/contact_top.png" />
-        </div>
-        <div style="width: 60%; text-align: center; float: right; margin-right: 100px" class="black-box">CONTACT</div>
-        <div style="clear: right; margin-left: 100px" class="green-box">
-          <p>TARTIN’EMOI</p>
+  <div class="wrap-container">
+    <div>
+      <img style="width: 60%; display: block; margin: auto;" class="img-responsive" src="assets/images/contact_top.png" />
+    </div>
 
-          <p>RUE DU VERTBOIS 9  4000 LIEGE
-          <br>INFO@TARTINEMOI.BE
-          <br>0495825848</p>
-        </div>
-      </div>
+    <div class="nav-bg"></div>
 
-      <div class="nav-bg"></div>
+    <nav class="navbar nav-over">
 
-      <nav class="navbar nav-over">
-
-        <div class="container">
-          <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false"
+            aria-controls="navbar">
               <span class="sr-only">Toggle navigation</span>
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="index.html"><img src="assets/images/logo.png" width="200" height="27"></a>
-          </div>
-          <div id="navbar" class="collapse navbar-collapse">
-            <ul class="nav navbar-nav">
-              <li><a href="concept.html">CONCEPT</a></li>
-              <li><a href="carte.html">LA CARTE</a></li>
-              <li><a href="collaborators.html">COLLABORATEURS</a></li>
-              <li><a href="contact.html">CONTACT</a></li>
-            </ul>
-          </div><!--/.nav-collapse -->
+          <a class="navbar-brand" href="index.html"><img src="assets/images/logo.png" width="200" height="27"></a>
         </div>
-        
-      </nav>
-
-      <div style="position: relative; margin-top: 600px">
-        <div>
-          <img class="img-responsive" src="assets/images/main_bottom.png" />
+        <div id="navbar" class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+            <li><a href="concept.html">CONCEPT</a></li>
+            <li><a href="carte.html">LA CARTE</a></li>
+            <li><a href="collaborators.html">COLLABORATEURS</a></li>
+            <li><a href="contact.html">CONTACT</a></li>
+          </ul>
         </div>
-        <div class="footer-socials-wrapper">
-          <div class="footer-socials">
-            <span>RETROUVEZ NOUS AUSSI SUR</span>
-            <a target="_blank" href="https://www.facebook.com/tartinemoiaussi/"><img src="assets/images/facebook_icon.png" /></a>
-            <a target="_blank" href="https://www.instagram.com/tartinemoiaussi/"><img src="assets/images/instagram_icon.png" /></a> 
-          </div>
-        </div>
+        <!--/.nav-collapse -->
       </div>
 
-      <div class="footer">
-        <span>100% LOCAL, 100% SAVOIR FAIRE BELGE, 100% DELICIEUX</span>
-        <img src="assets/images/FLAG.png" />
-      </div>
+    </nav>
 
+    <div class="contact-box black-box">CONTACT</div>
+    <div class="green-box">
+      <p>TARTIN’EMOI</p>
+
+      <p>RUE DU VERTBOIS 9 4000 LIEGE
+        <br>INFO@TARTINEMOI.BE
+        <br>0495825848</p>
     </div>
 
-    <!-- Bootstrap core JavaScript
+    <div id="overlay" class="google-map" style="margin-bottom: 150px">
+      <iframe id="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d632.5972660816274!2d5.573162911175068!3d50.63846512112821!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c0fa05a0323515%3A0x1fbb26326b10b3e1!2sTartin&#39;emoi!5e0!3m2!1sen!2s!4v1491239349116"
+        width="80%" height="400px" frameborder="0" style="border:0" allowfullscreen></iframe>
+    </div>
+    <div style="position: relative; clear: right">
+      <div>
+        <img class="img-responsive" src="assets/images/main_bottom.png" />
+      </div>
+      <div class="footer-socials">
+        <span>RETROUVEZ NOUS AUSSI SUR</span>
+        <a target="_blank" href="https://www.facebook.com/tartinemoiaussi/"><img src="assets/images/facebook_icon.png" /></a>
+        <a target="_blank" href="https://www.instagram.com/tartinemoiaussi/"><img src="assets/images/instagram_icon.png" /></a>
+      </div>
+    </div>
+
+    <div class="footer">
+      <span>100% LOCAL, 100% SAVOIR FAIRE BELGE, 100% DELICIEUX</span>
+      <img src="assets/images/FLAG.png" />
+    </div>
+
+  </div>
+
+  <!-- Bootstrap core JavaScript
     ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="assets/vendor/jquery.min.js"><\/script>')</script>
-    <script src="assets/vendor/bootstrap/js/bootstrap.min.js"></script>
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="assets/js/ie10-viewport-bug-workaround.js"></script>
-  </body>
+  <!-- Placed at the end of the document so the pages load faster -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <script>
+    window.jQuery || document.write('<script src="assets/vendor/jquery.min.js"><\/script>')
+  </script>
+  <script src="assets/vendor/bootstrap/js/bootstrap.min.js"></script>
+  <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+  <script src="assets/js/ie10-viewport-bug-workaround.js"></script>
+  <script>
+      $(document).ready(function () {
+          $('#map').addClass('scrolloff');                // set the mouse events to none when doc is ready
+          
+          $('#overlay').on("mouseup",function(){          // lock it when mouse up
+            $('#map').addClass('scrolloff'); 
+              //somehow the mouseup event doesn't get call...
+            });
+          $('#overlay').on("mousedown",function(){        // when mouse down, set the mouse events free
+            $('#map').removeClass('scrolloff');
+          });
+
+          $("#map").mouseleave(function () {              // becuase the mouse up doesn't work... 
+              $('#map').addClass('scrolloff');            // set the pointer events to none when mouse leaves the map area
+                                                          // or you can do it on some other event
+                                                        });
+        });
+      </script>
+</body>
+
 </html>
