--- a/index.html
+++ b/index.html
@@ -1,66 +1,68 @@
-
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="">
-    <meta name="author" content="">
 
-    <title>Tartin'emoi</title>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+  <meta name="description" content="">
+  <meta name="author" content="">
 
-    <!-- Bootstrap core CSS -->
-    <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <title>Tartin'emoi</title>
 
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <link href="assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
+  <!-- Bootstrap core CSS -->
+  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Custom styles for this template -->
-    <link href="assets/css/main.css" rel="stylesheet">
+  <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+  <link href="assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
 
-    <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
-    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-    <script src="assets/js/ie-emulation-modes-warning.js"></script>
+  <!-- Custom styles for this template -->
+  <link href="assets/css/main.css" rel="stylesheet">
 
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
+  <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
+  <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
+  <script src="assets/js/ie-emulation-modes-warning.js"></script>
+
+  <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+  <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-  </head>
+</head>
 
-  <body>
-    <div class="wrap-container">
-      <div style="padding-top: 150px; position: relative">
-        <img class="img-responsive" src="assets/images/main_top.png" />
-        <div style="margin-left: 150px; position: absolute; bottom: -60px" class="black-box">NOTRE SECRET ? DES PRODUITS FRAIS ET LOCAUX</div>
-      </div>
+<body>
+  <div class="wrap-container">
+    <div style="padding-top: 150px; position: relative">
+      <img class="img-responsive" src="assets/images/main_top.png" />
+      <div style="margin-left: 150px; position: absolute; bottom: -60px" class="black-box">NOTRE SECRET ? DES PRODUITS FRAIS ET LOCAUX</div>
+    </div>
 
-      <nav class="navbar nav-over">
+    <nav class="navbar nav-over">
 
-        <div class="container">
-          <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false"
+            aria-controls="navbar">
               <span class="sr-only">Toggle navigation</span>
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="index.html"><img src="assets/images/logo.png" width="200" height="27"></a>
-          </div>
-          <div id="navbar" class="collapse navbar-collapse">
-            <ul class="nav navbar-nav">
-              <li><a href="concept.html">CONCEPT</a></li>
-              <li><a href="carte.html">LA CARTE</a></li>
-              <li><a href="collaborators.html">COLLABORATEURS</a></li>
-              <li><a href="contact.html">CONTACT</a></li>
-            </ul>
-          </div><!--/.nav-collapse -->
+          <a class="navbar-brand" href="index.html"><img src="assets/images/logo.png" width="200" height="27"></a>
         </div>
-        
-      </nav>
+        <div id="navbar" class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+            <li><a href="concept.html">CONCEPT</a></li>
+            <li><a href="carte.html">LA CARTE</a></li>
+            <li><a href="collaborators.html">COLLABORATEURS</a></li>
+            <li><a href="contact.html">CONTACT</a></li>
+          </ul>
+        </div>
+        <!--/.nav-collapse -->
+      </div>
+
+    </nav>
 
     <div style="padding: 0px; margin-top: 90px" class="container-fluid">
 
@@ -73,12 +75,10 @@
         <div>
           <img class="img-responsive" src="assets/images/main_bottom.png" />
         </div>
-        <div class="footer-socials-wrapper">
-          <div class="footer-socials">
-            <span>RETROUVEZ NOUS AUSSI SUR</span>
-            <a target="_blank" href="https://www.facebook.com/tartinemoiaussi/"><img src="assets/images/facebook_icon.png" /></a>
-            <a target="_blank" href="https://www.instagram.com/tartinemoiaussi/"><img src="assets/images/instagram_icon.png" /></a> 
-          </div>
+        <div class="footer-socials">
+          <span>RETROUVEZ NOUS AUSSI SUR</span>
+          <a target="_blank" href="https://www.facebook.com/tartinemoiaussi/"><img src="assets/images/facebook_icon.png" /></a>
+          <a target="_blank" href="https://www.instagram.com/tartinemoiaussi/"><img src="assets/images/instagram_icon.png" /></a>
         </div>
       </div>
 
@@ -87,16 +87,20 @@
         <img src="assets/images/FLAG.png" />
       </div>
 
-    </div><!-- /.container -->
     </div>
+    <!-- /.container -->
+  </div>
 
-    <!-- Bootstrap core JavaScript
+  <!-- Bootstrap core JavaScript
     ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="assets/vendor/jquery.min.js"><\/script>')</script>
-    <script src="assets/vendor/bootstrap/js/bootstrap.min.js"></script>
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="assets/js/ie10-viewport-bug-workaround.js"></script>
-  </body>
+  <!-- Placed at the end of the document so the pages load faster -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <script>
+    window.jQuery || document.write('<script src="assets/vendor/jquery.min.js"><\/script>')
+  </script>
+  <script src="assets/vendor/bootstrap/js/bootstrap.min.js"></script>
+  <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+  <script src="assets/js/ie10-viewport-bug-workaround.js"></script>
+</body>
+
 </html>
