--- a/contact.html
+++ b/contact.html
@@ -75,7 +75,7 @@
         <br>0495825848</p>
     </div>
 
-    <div id="overlay" class="google-map" style="margin-bottom: 150px">
+    <div id="overlay" class="google-map">
       <iframe id="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d632.5972660816274!2d5.573162911175068!3d50.63846512112821!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c0fa05a0323515%3A0x1fbb26326b10b3e1!2sTartin&#39;emoi!5e0!3m2!1sen!2s!4v1491239349116"
         width="80%" height="400px" frameborder="0" style="border:0" allowfullscreen></iframe>
     </div>
