--- a/collaborators.html
+++ b/collaborators.html
@@ -64,28 +64,35 @@
         
       </nav>
 
-      <div style="width: 700px; text-align: center; margin-left: 50px" class="black-box">BENOIT SEGONDS</div>
+      <div style="max-width: 700px; text-align: center; margin-left: 50px; width: 80%" class="black-box">BENOIT SEGONDS</div>
 
-      <div style="margin: 40px 100px 40px 100px" class="row">
-        <div class="col-md-3">
+      <div class="row collaborator-block">
+        <div class="col-md-3" style="margin-bottom: 20px">
           <img class="img-responsive" src="assets/images/colla_1.png" />
         </div>
-        <div class="col-md-9">
-          <img class="img-responsive" src="assets/images/colla_text_1.png" />
+        <div class="col-md-9 collaborator-texts">
+          <p>Philosophie:<br>«le goût du bon pain»</p>
+          <p>Je fais du pain de façon artisanale et traditionnelle à partir de farines de meilleures qualités pour redonner au pain son bon goût d'autrefois et par là même sa place sur la table.
+<br>Travailler de façon artisanale c'est être en contact permanent avec ses pâtes et avoir la latitude de faire les compensations exigées par les différentes variables en vigueur dans le fournil.
+<br>Travailler de façon traditionnelle c'est tenir compte -comme l'ont fait des générations de boulangers avant nous- des avantages et des contraintes que la nature nous impose au niveau du temps dans les processus naturels de panification.
+<br>Mes pains sont faits à partir de farines biologiques, de levain, de sel marin et d'eau potable. Ne comprenant que ces 4 ingrédients je porte la plus haute attention à chacun d’eux.</p>
+          <a href="http://benoit-segonds.be/fr/default.asp?"><p>www.benoit-segonds.be</p></a>
         </div>
       </div>
 
-      <div style="width: 700px; text-align: center; margin-right: 50px; margin-bottom: 40px; float: right" class="black-box">LA FERME A L’ARBRE</div>
+      <div style="max-width: 700px; text-align: center; margin-right: 50px; margin-bottom: 40px; float: right; width: 80%" class="black-box">LA FERME A L’ARBRE</div>
       
-      <div style="margin: 40px 100px 40px 100px" class="row clearfix">
-        <div class="col-md-9" style="margin-bottom: 20px">
-          <img class="img-responsive" src="assets/images/colla_text_2.png" />
+      <div class="row clearfix collaborator-block" style="clear: both">
+        <div class="col-md-9 collaborator-texts" style="margin-bottom: 20px">
+          <p>Les premières cultures de légumes bios commencent en 1978 sur 1/4 Ha d'anciennes prairies. Rien d'officiel à l'époque ne permet de certifier ce mode de production, tout se joue sur la confiance et la transparence (explications, visites des cultures). Rapidement la superficie passera à 3 Ha Lorsque le premier label apparaît en Belgique, c'est tout naturellement que la ferme y adhère (Nature & Progrès, 1983).
+<br>Le point de vente, avec Michelle (la femme de Henri) à sa tête est alors installé à Ans, dans une artère commerciale. L'idée était d'aller vers le client. Comment en effet attirer les gens dans un petit village, en vendant des produits qui ne sont pas encore dans l'air du temps ? Ce choix se révèle vite avoir plusieurs inconvénients : Loyer à amortir qui se répercute sur les prix et éloignement de la ferme (approvisionnement moins facile, frais de transport,..). Après quelques mois, le magasin sera définitivement installé à la ferme. Il sera plusieurs fois aménagé et agrandi, mais ne quittera jamais plus le site. Actuellement il est installé dans un nouveau bâtiment écologique construit sur  la ferme. Toutes les semaines, une clientèle de plus en plus nombreuse vient y faire ses emplettes en toute confiance.</p>
+<a href="http://www.ferme-paque.be/fr"><p>www.ferme-paque.be</p></a>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-3" style="margin-bottom: 20px">
           <img class="img-responsive" src="assets/images/colla_2.png" />
         </div>
-        <div style="right: 50px; bottom: 50px; position: absolute">
-          <a href="collaborators_2.html"><img src="assets/images/arrow_right.png" width="30px"></a>
+        <div class="collaborator-arrow">
+          <a href="collaborators_2.html"><img src="assets/images/arrow_right.png" width="100%"></a>
         </div>
       </div>
 
