--- a/collaborators_2.html
+++ b/collaborators_2.html
@@ -64,34 +64,36 @@
         
       </nav>
 
-      <div style="width: 700px; text-align: center; margin-left: 50px" class="black-box">LA BOUCHERIE</div>
+      <div style="max-width: 700px; text-align: center; margin-left: 50px; width: 80%; margin-top:20px" class="black-box">LA BOUCHERIE</div>
 
-      <div style="margin: 40px 100px 40px 100px" class="row">
-        <div class="col-md-3">
+      <div class="row collaborator-block">
+        <div class="col-md-3" style="margin-bottom: 20px">
           <img class="img-responsive" src="assets/images/colla_3.png" />
         </div>
-        <div class="col-md-9">
-          <img class="img-responsive" src="assets/images/colla_text_3.png" />
+        <div class="col-md-9 collaborator-texts">
+          <p>Nous avons plusieurs boucheries en province de Liège. Deux sont présentes dans le centre de Liège, rue des Dominicains et rue Saint-Paul, la troisième boucherie est à Huy, rue Mounie.</p>
+
+<p>Nos boucheries vous proposent les meilleurs produits d'ici et d'ailleurs, basés sur une expérience longue de 30 ans, commencée par Armand Piacenza. C'est sur le célèbre marché de Rungis que nous choisissons les meilleurs morceaux de viandes, les meilleures matières premières ainsi que les autres produits qui nous permettent de vous proposer une qualité extraordinaire à Liège.</p>
+          <a href="http://www.la-boucherie.be/"><p>www.la-boucherie.be</p></a>
         </div>
       </div>
 
-      <div style="width: 700px; text-align: center; margin-right: 50px; margin-bottom: 40px; float: right" class="black-box">LE BONHEUR EST DANS LE PRE</div>
+      <div style="max-width: 700px; text-align: center; margin-right: 50px; margin-bottom: 40px; float: right; width: 80%" class="black-box">LE BONHEUR EST DANS LE PRE</div>
       
-      <div style="margin: 40px 100px 40px 100px" class="row clearfix">
-        <div class="col-md-9" style="margin-bottom: 20px">
-          <img class="img-responsive" src="assets/images/colla_text_4.png" />
+      <div class="row clearfix collaborator-block" style="clear: both">
+        <div class="col-md-9 collaborator-texts" style="margin-bottom: 20px">
+          <p>Le Bonheur est dans le pré propose une sélection de fromages (un assortiment proche de la centaine) à base des trois laits (chèvre, brebis, vache), mais aussi de l’épicerie fine, des salaisons et du vin. «Nous nous rendons au marché de Rungis toutes les deux semaines pour sélectionner les produits» 
+<br>Au comptoir, on trouve principalement du fromage français, mais aussi la gamme hollandaise, suisse, et des produits locaux comme le fromage d’Orval, le Vieux Liège, le Gros Chêne, ou le Herve. « Ma cousine est une des dernières à fabriquer du fromage de Herve au lait cru, j’y tiens donc », sourit Marc Hanssen. </p>
+<a href="https://www.facebook.com/LeBonheurestdanslePre.liege/"><p>www.facebook.com/LeBonheurestdanslePre.liege</p></a>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-3" style="margin-bottom: 20px">
           <img class="img-responsive" src="assets/images/colla_4.png" />
         </div>
-      </div>
-
-      <div class="clearfix" style="margin-top: 150px">
-        <div style="right: 50px; bottom: 50px; position: absolute">
-          <a href="collaborators_3.html"><img src="assets/images/arrow_right.png" width="30px"></a>
+        <div class="collaborator-arrow">
+          <a href="collaborators_3.html"><img src="assets/images/arrow_right.png" width="100%"></a>
         </div>
-        <div style="left: 50px; bottom: 50px; position: absolute">
-          <a href="collaborators.html"><img src="assets/images/arrow_left.png" width="30px"></a>
+        <div class="collaborator-left-arrow">
+          <a href="collaborators.html"><img src="assets/images/arrow_left.png" width="100%"></a>
         </div>
       </div>
 
