--- a/collaborators_3.html
+++ b/collaborators_3.html
@@ -34,7 +34,7 @@
   <body>
 
     <div class="wrap-container">
-      <div style="margin-left: 100px; margin-right: 300px">
+      <div style="margin-left: 50px; margin-right: 50px">
         <img class="img-responsive" src="assets/images/colla_top_3.png" />
       </div>
 
@@ -64,34 +64,42 @@
         
       </nav>
 
-      <div style="width: 700px; text-align: center; margin-left: 50px" class="black-box">POINT FERME</div>
+      <div style="max-width: 700px; text-align: center; margin-left: 50px; width: 80%" class="black-box">POINT FERME</div>
 
-      <div style="margin: 40px 100px 40px 100px" class="row">
-        <div class="col-md-3">
+      <div class="row collaborator-block">
+        <div class="col-md-3" style="margin-bottom: 20px">
           <img class="img-responsive" src="assets/images/colla_5.png" />
         </div>
-        <div class="col-md-9">
-          <img class="img-responsive" src="assets/images/colla_text_5.png" />
+        <div class="col-md-9 collaborator-texts">
+          <p>PointFerme vous propose des paniers de produits issus des fermes du Condroz liégeois : fruits et légumes de saison, fromages, poulets, viande bovine, … sur votre lieu de travail, au sein de votre association, dans leur quartier, leur école, etc …
+<br>Les producteurs amènent leurs productions sur une plate-forme où nous préparons les paniers qui sont ensuite livrés vers vos Points Ferme. Les Points Ferme sont des points de regroupement des consommateurs : lieu de travail, association, commerce de quartier, école, particulier, etc…
+<br>Des produits locaux et de saison tout simplement
+<br>En consommant des produits locaux, on pense à notre santé, à notre porte-monnaie et également à l’environnement.
+<br>En plus, on fait plaisir à nos papilles, le goût est plus prononcé puisque les fruits et légumes arrivent à maturité juste à temps pour nous offrir les éléments nutritifs dont nous avons besoin.
+<br>On oublie les haricots du Kenya, les kiwis de Nouvelle-Zélande et les fraises en janvier. On redécouvre les variétés rares ou oubliées de pommes, de tomates, de pommes de terre, de courges ou de salade ou encore de la roquette, de l’ortie, de la moutarde, du raifort, du pourpier, des chicons,…</p>
+          <a href="http://www.pointferme.be/"><p>www.pointferme.be</p></a>
         </div>
       </div>
 
-      <div style="width: 700px; text-align: center; margin-right: 50px; margin-bottom: 40px; float: right" class="black-box">SIMONE A SOIF</div>
+      <div style="max-width: 700px; text-align: center; margin-right: 50px; margin-bottom: 40px; float: right; width: 80%" class="black-box">SIMONE A SOIF</div>
       
-      <div style="margin: 40px 100px 40px 100px" class="row clearfix">
-        <div class="col-md-9" style="margin-bottom: 20px">
-          <img class="img-responsive" src="assets/images/colla_text_6.png" />
+      <div class="row clearfix collaborator-block" style="clear: both">
+        <div class="col-md-9 collaborator-texts" style="margin-bottom: 20px">
+          <p>Simone a Soif! est une nouvelle boisson bio artisanale belge et unique en son genre : une hydrolade.
+<br>Une hydrolade est une boisson 100% naturelle à base de vapeur de plantes (appelées hydrolats) que nous mélangeons avec des fruits/légumes locaux fraîchement pressés et de l’eau.
+<br>Rien d’autre? Et non… Pas de sucres ajoutés, ni d’aspartame ou autre édulcorant, d’arômes même naturels, de conservateurs, d’additifs ou encore de colorants… contrairement à la majorité des sodas du marché.
+<br>Simone a Soif! est une boisson non-pétillante, aussi subtile qu’une infusion avec tous les bienfaits des plantes sans les méfaits du sucre.
+<br>S’hydrater, c’est bien. S’hydrolater, c’est mieux !</p>
+<a href="https://www.simoneasoif.be/"><p>www.simoneasoif.be</p></a>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-3" style="margin-bottom: 20px">
           <img class="img-responsive" src="assets/images/colla_6.png" />
         </div>
-      </div>
-
-      <div class="clearfix" style="margin-top: 150px">
-        <div style="right: 50px; bottom: 50px; position: absolute">
-          <a href="collaborators_4.html"><img src="assets/images/arrow_right.png" width="30px"></a>
+        <div class="collaborator-arrow">
+          <a href="collaborators_4.html"><img src="assets/images/arrow_right.png" width="100%"></a>
         </div>
-        <div style="left: 50px; bottom: 50px; position: absolute">
-          <a href="collaborators_2.html"><img src="assets/images/arrow_left.png" width="30px"></a>
+        <div class="collaborator-left-arrow">
+          <a href="collaborators_2.html"><img src="assets/images/arrow_left.png" width="100%"></a>
         </div>
       </div>
 
