--- a/collaborators_4.html
+++ b/collaborators_4.html
@@ -34,7 +34,7 @@
   <body>
 
     <div class="wrap-container">
-      <div style="margin-left: 100px; margin-right: 300px">
+      <div style="margin-left: 50px; margin-right: 50px">
         <img class="img-responsive" src="assets/images/colla_top_4.png" />
       </div>
 
@@ -64,34 +64,37 @@
         
       </nav>
 
-      <div style="width: 700px; text-align: center; margin-left: 50px" class="black-box">CLIMONADE</div>
+      <div style="max-width: 700px; text-align: center; margin-left: 50px; width: 80%" class="black-box">CLIMONADE</div>
 
-      <div style="margin: 40px 100px 40px 100px" class="row">
-        <div class="col-md-3">
+      <div class="row collaborator-block">
+        <div class="col-md-3" style="margin-bottom: 20px">
           <img class="img-responsive" src="assets/images/colla_7.png" />
         </div>
-        <div class="col-md-9">
-          <img class="img-responsive" src="assets/images/colla_text_7.png" />
+        <div class="col-md-9 collaborator-texts">
+          <p>Un arôme secret et mystérieux, venu des souvenirs intimes de La Berlière, a été mis en fabrication en 2013 pour le grand public.  Découverte artisanale, car il s'agissait simplement de l'aboutissement de longues et patientes dégustations. Bien nécessaires pour la mise au point définitive du sirop aromatique, à la composition si jalousement préservée.   Nous appelons ce sirop concentré tout simplement "La Chamade". Car elle fait battre nos coeurs..</p>
+ 
+<p>Ce sirop est composé d'ingrédients purs et naturels:  jus d'agrumes qui lui donnent une fraîcheur avec une touche d'acidité, ajouté à la douceur parfumée du sucre de betterave de Hesbaye pour équilibrer la mise en bouche. Et enfin l'extrait d'un fruit méditerranéen tellement savoureux et si soigneusement dosé qu'il convient à tous les palais. Ses propriétés médicinales sont proprement aussi magiques que la volupté de son goût si spécial.  Son parfum frais embaume l'arôme délicat qui se dégage à chaque dégustation.</p>
+          <a href="http://yvesdoultremont.wixsite.com/climonade/la-climonade"><p>www.yvesdoultremont.wixsite.com/climonade/la-climonade</p></a>
         </div>
       </div>
 
-      <div style="width: 700px; text-align: center; margin-right: 50px; margin-bottom: 40px; float: right" class="black-box">LA BESTIALE</div>
+      <div style="max-width: 700px; text-align: center; margin-right: 50px; margin-bottom: 40px; float: right; width: 80%" class="black-box">LA BESTIALE</div>
       
-      <div style="margin: 40px 100px 40px 100px" class="row clearfix">
-        <div class="col-md-9" style="margin-bottom: 20px">
-          <img class="img-responsive" src="assets/images/colla_text_8.png" />
+      <div class="row clearfix collaborator-block" style="clear: both">
+        <div class="col-md-9 collaborator-texts" style="margin-bottom: 20px">
+          <p>Depuis plusieurs années, je brassais en amateur pour mieux comprendre le produit, mais ce type de production est hélas fort aléatoire et il est quasi impossible de reproduire plusieurs fois la même bière malgré des ingrédients identiques.
+<br>Grâce à l’obtention d’une bourse de préactivité de la région Wallonne, j’ai pu professionnaliser la démarche. Je me suis ainsi formé auprès des chercheurs de l’Institut d’Agronomie de Huy (ISIa Huy) et plus précisément Messieurs EL Our et Boukharta de la section brasserie, avec lesquels j’ai perfectionné et mis au point mes recettes.
+<br>Je profite d’ailleurs de cette tribune pour les remercier publiquement pour leur professionnalisme, mais surtout pour leur gentillesse et leur disponibilité qui nous ont permis de dépasser le cadre professionnel et de tisser de véritables liens d’amitié.</p>
+<a href="http://bestiale.be/"><p>www.bestiale.be</p></a>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-3" style="margin-bottom: 20px">
           <img class="img-responsive" src="assets/images/colla_8.png" />
         </div>
-      </div>
-
-      <div class="clearfix" style="margin-top: 150px">
-        <div style="right: 50px; bottom: 50px; position: absolute">
-          <a href="collaborators.html"><img src="assets/images/arrow_right.png" width="30px"></a>
+        <div class="collaborator-arrow">
+          <a href="collaborators.html"><img src="assets/images/arrow_right.png" width="100%"></a>
         </div>
-        <div style="left: 50px; bottom: 50px; position: absolute">
-          <a href="collaborators_3.html"><img src="assets/images/arrow_left.png" width="30px"></a>
+        <div class="collaborator-left-arrow">
+          <a href="collaborators_3.html"><img src="assets/images/arrow_left.png" width="100%"></a>
         </div>
       </div>
 
