--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 <body>
   <div class="wrap-container">
-    <div style="padding-top: 150px; position: relative">
+    <div class="home-top">
       <img class="img-responsive" src="assets/images/main_top.png" />
       <div style="margin-left: 150px; position: absolute; bottom: -60px" class="black-box">NOTRE SECRET ? DES PRODUITS FRAIS ET LOCAUX</div>
     </div>
