--- a/carte.html
+++ b/carte.html
@@ -1,96 +1,128 @@
-
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="">
-    <meta name="author" content="">
 
-    <title>Tartin'emoi</title>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+  <meta name="description" content="">
+  <meta name="author" content="">
 
-    <!-- Bootstrap core CSS -->
-    <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <title>Tartin'emoi</title>
 
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <link href="assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
+  <!-- Bootstrap core CSS -->
+  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Custom styles for this template -->
-    <link href="assets/css/main.css" rel="stylesheet">
+  <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+  <link href="assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
 
-    <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
-    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-    <script src="assets/js/ie-emulation-modes-warning.js"></script>
+  <!-- Custom styles for this template -->
+  <link href="assets/css/main.css" rel="stylesheet">
 
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
+  <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
+  <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
+  <script src="assets/js/ie-emulation-modes-warning.js"></script>
+
+  <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+  <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-  </head>
+</head>
 
-  <body>
+<body>
 
-    <div class="wrap-container">
+  <div class="wrap-container">
+    <div>
       <div>
-        <div>
-          <img class="img-responsive" src="assets/images/carte_top.png" />
-        </div>
-        <div style="margin-left: 100px; width: 700px; text-align: center">
-          <div style="width: 100%" class="black-box">LES INCONTOURNABLES</div>
-          <img style="width: 85%; margin-top: 30px" src="assets/images/menu1.png" />
-        </div>
+        <img class="img-responsive" src="assets/images/carte_top.png" />
       </div>
+      <div class="first-carte">
+        <div style="width: 100%; text-align: center" class="black-box">LES INCONTOURNABLES</div>
+        <div class="first-carte-box">
+          <p>LA TARTINE QUI CROQUE</p>
 
-      <div class="nav-bg"></div>
+          <p>LE PAIN DE VIANDE ET SA TARTARE</p>
 
-      <nav class="navbar nav-over">
+          <p>L’AMERICAIN 101% MAISON</p>
 
-        <div class="container">
-          <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+          <p>LE POULET FERMIER A L’ESTRAGON</p>
+
+          <p>LE CHEVRE ET SON LARD CROQUANT PARFUME AU MIEL</p>
+
+          <p>LE CROUSTILLANT DE POULET FERMIER ET SON FROMAGE AROMATISE AU THYM</p>
+
+          <p>LES BOULETTES VEGE</p>
+
+          <p>LA MOUSSE DE TRUITE FUMEE ET A LA CREME DE CIBOULETTE</p>
+        </div>
+
+      </div>
+    </div>
+
+    <div class="nav-bg"></div>
+
+    <nav class="navbar nav-over">
+
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false"
+            aria-controls="navbar">
               <span class="sr-only">Toggle navigation</span>
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="index.html"><img src="assets/images/logo.png" width="200" height="27"></a>
-          </div>
-          <div id="navbar" class="collapse navbar-collapse">
-            <ul class="nav navbar-nav">
-              <li><a href="concept.html">CONCEPT</a></li>
-              <li><a href="carte.html">LA CARTE</a></li>
-              <li><a href="collaborators.html">COLLABORATEURS</a></li>
-              <li><a href="contact.html">CONTACT</a></li>
-            </ul>
-          </div><!--/.nav-collapse -->
+          <a class="navbar-brand" href="index.html"><img src="assets/images/logo.png" width="200" height="27"></a>
         </div>
-        
-      </nav>
+        <div id="navbar" class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+            <li><a href="concept.html">CONCEPT</a></li>
+            <li><a href="carte.html">LA CARTE</a></li>
+            <li><a href="collaborators.html">COLLABORATEURS</a></li>
+            <li><a href="contact.html">CONTACT</a></li>
+          </ul>
+        </div>
+        <!--/.nav-collapse -->
+      </div>
 
-      <div style="margin-top: 30px; position: relative">
-        <img class="img-responsive" src="assets/images/carte_bottom.png" />
-        <div style="width: 700px; text-align: center; position: absolute; right: 100px; top: 100px">
-          <div style="width: 100%" class="black-box">LES TARTINES DE SAISON</div>
-          <img style="width: 70%; margin-top: 30px" src="assets/images/menu2.png" />
+    </nav>
+
+    <div class="bottom-block">
+      <img class="img-responsive" src="assets/images/carte_bottom.png" />
+      <div class="second-carte">
+        <div style="width: 100%; text-align: center" class="black-box">LES TARTINES DE SAISON</div>
+        <div class="second-carte-box">
+          <p>LA SALADE PAIN DE VIANDE</p>
+
+          <p>LA SALADE CROUSTILLANT DE POULET</p>
+
+          <p>LA SALADE CHEVRE LARD ET MIEL</p>
+
+          <p>LA SALADE CHEVRE SPECULOOS</p>
+
+          <p>LA SALADE BOULETTES VEGE</p>
         </div>
-        <div style="position: absolute; bottom: 0px; right: 0px" class="footer-over">
+      </div>
+      <div style="position: absolute; bottom: 0px; right: 0px" class="footer white-footer">
         <span>100% LOCAL, 100% SAVOIR FAIRE BELGE, 100% DELICIEUX</span>
         <img src="assets/images/FLAG.png" />
       </div>
-      </div>
-
     </div>
 
-    <!-- Bootstrap core JavaScript
+  </div>
+
+  <!-- Bootstrap core JavaScript
     ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="assets/vendor/jquery.min.js"><\/script>')</script>
-    <script src="assets/vendor/bootstrap/js/bootstrap.min.js"></script>
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="assets/js/ie10-viewport-bug-workaround.js"></script>
-  </body>
+  <!-- Placed at the end of the document so the pages load faster -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <script>
+    window.jQuery || document.write('<script src="assets/vendor/jquery.min.js"><\/script>')
+  </script>
+  <script src="assets/vendor/bootstrap/js/bootstrap.min.js"></script>
+  <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+  <script src="assets/js/ie10-viewport-bug-workaround.js"></script>
+</body>
+
 </html>
